[package]
name = "roselite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
json5 = "0.4.1"
toml = "0.7.4"
anyhow = "1.0.71"
futures = "0.3.28"