[workspace]

members = [
    "roselite",
    "roselite-common",
    "roselite-config",
    "roselite-request",
    "roselite-server",
]

[profile.dev]
# Debug information slows down the build and increases caches in the
# target folder, but we don't require stack traces in most cases.
debug = false

[profile.release]
# In release, however, we do want full debug information to report
# panic and error stack traces.
debug = true