[package]
name = "roselite-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
json5 = "0.4.1"
toml = "0.8.8"
anyhow = "1.0.75"