[package]
name = "roselite-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
fastping-rs = "0.2"
sentry = { version = "0.31", features = ["default", "anyhow"] }
sentry-tracing = { version = "0.31" }
roselite-config = { path = "../roselite-config" }
roselite-common = { path = "../roselite-common" }