[package]
name = "roselite-request"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.75"
fastping-rs = "0.2.4"
sentry = { version = "0.37.0", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "anyhow"] }
sentry-tracing = { version = "0.37.0" }
roselite-config = { path = "../roselite-config" }
roselite-common = { path = "../roselite-common" }