[package]
name = "roselite-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
anyhow = "1.0.71"
sentry = { version = "0.31", features = ["default", "anyhow"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11" }
roselite-common = { path = "../roselite-common" }
roselite-request = { path = "../roselite-request" }