[package]
name = "roselite-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.7.2"
anyhow = "1.0.75"
sentry = { version = "0.32.0", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "anyhow"] }
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", default-features = false }
roselite-common = { path = "../roselite-common" }
roselite-request = { path = "../roselite-request" }