[package]
name = "roselite-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.8.3"
anyhow = "1.0.75"
sentry = { version = "0.37.0", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls", "anyhow"] }
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false }
roselite-common = { path = "../roselite-common" }
roselite-request = { path = "../roselite-request" }